    annex-uuid is re-probed after the initial push.
  * Added annex.security.allow-insecure-https config, which allows
    using old http servers that use TLS 1.2 without Extended Main
    Secret support.
  * fsck: Support repairing a corrupted file in a versiond S3 remote.
  * addurl, importfeed: Enable --verifiable by default.

 -- Joey Hess <id@joeyh.name>  Mon, 19 Jan 2026 10:55:02 -0400

git-annex (10.20260115) upstream; urgency=medium

  * New git configs annex.initwanted, annex.initrequired, and
    annex.initgroups.
  * Fix bug that could result in a tree imported from a remote containing
    missing git blobs.
  * fix: Populate unlocked pointer files in situations where a git command,
    like git reset or git stash, leaves them unpopulated.
  * Pass www-authenticate headers in to to git credential, to support
    eg, git-credential-oauth.
  * import: Fix display of some import errors.
  * external: Respond to GETGITREMOTENAME during INITREMOTE with the remote
    name.
  * When displaying sqlite error messages, include the path to the database.
  * webapp: Remove support for local pairing; use wormhole pairing instead.
  * git-annex.cabal: Removed pairing build flag, and no longer depends
    on network-multicast or network-info.
  * Remove support for building with old versions of persistent and 
    persistent-sqlite.
  * Removed support for building with ghc older than 9.6.6.
  * stack.yaml: Update to lts-24.26.

 -- Joey Hess <id@joeyh.name>  Fri, 16 Jan 2026 11:09:14 -0400

git-annex (10.20251215) upstream; urgency=medium

  * Added annex.trashbin configuration.
  * Added --presentsince, --lackingsince, and --changedsince file
    matching options.
  * Added TRANSFER-RETRIEVE-URL extension to the external special remote
    protocol.
  * S3: Remote can be configured with an x-amz-tagging header.
    (Needs aws-0.25)
  * S3: Support Google Cloud Storage
    (Needs aws-0.25.1)
  * S3: Support restore=yes, when used with storageclass=DEEP_ARCHIVE and