@@ -1,13 +1,14 @@
 {- git-annex URL backend -- keys whose content is available from urls.
  -
- - Copyright 2011-2024 Joey Hess <id@joeyh.name>
+ - Copyright 2011-2026 Joey Hess <id@joeyh.name>
  -
  - Licensed under the GNU AGPL version 3 or higher.
  -}
 
 module Backend.URL (
 	backends,
-	fromUrl
+	fromUrl,
+	otherUrlKey,
 ) where
 
 import Annex.Common
@@ -41,3 +42,12 @@ fromUrl url size verifiable = mkKey $ \k -> k
 	, keyVariety = if verifiable then VURLKey else URLKey
 	, keySize = size
 	}
+
+{- From an URL key to a VURL key and vice-versa. -}
+otherUrlKey :: Key -> Maybe Key
+otherUrlKey k
+	| fromKey keyVariety k == URLKey = Just $
+		alterKey k $ \kd -> kd { keyVariety = VURLKey }
+	| fromKey keyVariety k == VURLKey = Just $
+		alterKey k $ \kd -> kd { keyVariety = URLKey }
+	| otherwise = Nothing
