@@ -1,6 +1,6 @@
 {- git-annex command
  -
- - Copyright 2015-2022 Joey Hess <id@joeyh.name>
+ - Copyright 2015-2026 Joey Hess <id@joeyh.name>
  -
  - Licensed under the GNU AGPL version 3 or higher.
  -}
@@ -12,6 +12,7 @@ module Command.UnregisterUrl where
 import Command
 import Logs.Web
 import Command.RegisterUrl (seekBatch, start, optParser, RegisterUrlOptions(..))
+import Backend.URL
 
 cmd :: Command
 cmd = withAnnexOptions [jsonOptions] $ command "unregisterurl"
@@ -26,13 +27,19 @@ seek o = case (batchOption o, keyUrlPairs o) of
 
 unregisterUrl :: Remote -> Key -> String -> Annex ()
 unregisterUrl _remote key url = do
+	unregisterUrl' url key
+	maybe noop (unregisterUrl' url) (otherUrlKey key)
+
+unregisterUrl' :: String -> Key -> Annex ()
+unregisterUrl' url key = do
 	-- Remove the url no matter what downloader;
 	-- registerurl can set OtherDownloader, and this should also
 	-- be able to remove urls added by addurl, which may use
 	-- YoutubeDownloader.
 	forM_ [minBound..maxBound] $ \dl ->
 		setUrlMissing key (setDownloader url dl)
-	-- Unlike unregisterurl, this does not update location tracking
-	-- for remotes other than the web special remote. Doing so with
-	-- a remote that git-annex can drop content from would rather
-	-- unexpectedly leave content stranded on that remote.
+	-- Unlike registerurl, this does not update location
+	-- tracking for remotes other than the web special remote.
+	-- Doing so with a remote that git-annex can drop content
+	-- from would rather unexpectedly leave content stranded
+	-- on that remote.
