@@ -11,8 +11,9 @@ git annex unregisterurl `[key url]`
 This plumbing-level command can be used to unregister urls when keys can
 no longer be downloaded from them.
 
-Normally the key is a git-annex formatted key. However, if the key cannot be
-parsed as a key, and is a valid url, an URL key is constructed from the url.
+Normally the key is a git-annex formatted key. However, when the key cannot
+be parsed as a key, and is a valid url, an URL key and a VURL key are both
+constructed from the url, and both keys are unregistered.
 
 Unregistering a key's last web url will make git-annex no longer treat content
 as being present in the web special remote. If some other special remote
